RI-92 fixed background position to prevent the background from jumping

--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -197,3 +197,8 @@ h1 {
     text-align: center;
   }
 }
+@media screen and (max-width: 360px) {
+  #navbar-items h1 {
+    font-size: 0.6rem;
+  }
+}
